fix: Hero banner center on small screen devices

--- a/css/style.css
+++ b/css/style.css
@@ -2133,4 +2133,47 @@ form label {
   color: #777;
 }
 
+/* Couple hero sizues */
+@media screen and (max-width: 768px) {
+  #fh5co-header {
+    background-position: center center !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #fh5co-header {
+    background-position: 50% center !important;
+    background-size: cover !important;
+  }
+}
+@media screen and (max-width: 480px) {
+  #fh5co-header .display-tc h1 {
+    font-size: 34px;
+    line-height: 1.3;
+  }
+
+  #fh5co-header .display-tc h2 {
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+
+  .simply-countdown > .simply-section {
+    width: 85px;
+    height: 85px;
+    margin: 4px;
+  }
+
+  .simply-countdown > .simply-section > div {
+    width: 85px;
+    height: 85px;
+  }
+
+  .simply-countdown > .simply-section .simply-amount {
+    font-size: 28px;
+  }
+
+  .simply-countdown > .simply-section .simply-word {
+    font-size: 11px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
